homepage fixes text align etc

--- a/release/public/app.css
+++ b/release/public/app.css
@@ -1,7 +1,7 @@
 body {
   overflow-x: hidden;
   font-family: 'Titillium Web', sans-serif;
-  font-size: 12px;
+  font-size: 13px;
   font-weight: 300;
   min-height: 100vh;
   padding-top: 75px;
@@ -9,7 +9,8 @@ body {
   color: #555;
   min-width: 100vw;
   position: relative;
-  will-change: margin-left; }
+  will-change: margin-left;
+  line-height: 1.6; }
   @media (max-width: 767px) {
     body {
       padding-top: 40px;
@@ -357,6 +358,20 @@ img {
       -webkit-filter: grayscale(0%);
               filter: grayscale(0%); }
 
+.gaca-alert {
+  background: #ce1029;
+  font-weight: bold;
+  font-size: 14px;
+  padding: 10px 0px;
+  line-height: 1.2;
+  color: white;
+  margin-top: 35px; }
+  @media (max-width: 991px) {
+    .gaca-alert {
+      margin-top: 0; } }
+  .gaca-alert span {
+    font-weight: 300; }
+
 [data-template="header"] .header {
   position: fixed;
   top: 0;
@@ -413,17 +428,6 @@ img {
     cursor: pointer;
     text-align: center;
     background: rgba(0, 0, 0, 0.1); }
-  [data-template="header"] .header .header-alert {
-    background: #ce1029;
-    font-weight: bold;
-    font-size: 14px;
-    padding: 10px 0px;
-    line-height: 1.2;
-    color: white;
-    position: relative;
-    z-index: -2; }
-    [data-template="header"] .header .header-alert span {
-      font-weight: 300; }
   [data-template="header"] .header .header-sub {
     background: rgba(0, 0, 0, 0.4);
     background: #508bea;
@@ -439,7 +443,7 @@ img {
       background: #508bea;
       -webkit-transition: .3s;
               transition: .3s;
-      padding: 0 20px;
+      width: 12.5%;
       color: #ffffff; }
       [data-template="header"] .header .header-sub .sub-item .fa {
         line-height: auto !important;
@@ -601,7 +605,7 @@ img {
         opacity: 1; }
     .box .box-header .box-title {
       font-size: 16px;
-      text-align: right; }
+      text-align: left; }
     .box .box-header .box-content {
       margin: 10px 0 0;
       display: block; }
@@ -878,6 +882,7 @@ img {
           border-radius: 4px 4px 0 0; }
         [data-template="slider"] .slider .slider-box .slider-items .slider-item .item-text {
           font-size: 12px;
+          font-size: 13px;
           background: #f7f7f7;
           padding: 10px;
           min-height: 75px;
@@ -906,13 +911,23 @@ img {
     position: relative;
     z-index: 1;
     overflow: hidden; }
+    [data-template="slider"] .slider .slider-blue-box .gaca-btn a {
+      color: inherit; }
     [data-template="slider"] .slider .slider-blue-box .blue-select {
       background: #508bea;
       padding: 10px;
       border-radius: 4px;
-      line-height: 40px;
       color: white;
       margin-bottom: 10px; }
+      [data-template="slider"] .slider .slider-blue-box .blue-select a.gaca-btn {
+        color: inherit;
+        text-decoration: none;
+        font-weight: normal; }
+        [data-template="slider"] .slider .slider-blue-box .blue-select a.gaca-btn:hover {
+          color: #508bea; }
+      [data-template="slider"] .slider .slider-blue-box .blue-select a {
+        color: inherit;
+        font-weight: bold; }
       [data-template="slider"] .slider .slider-blue-box .blue-select .clearfix {
         cursor: pointer; }
       [data-template="slider"] .slider .slider-blue-box .blue-select .blue-icon {
@@ -923,11 +938,13 @@ img {
         color: #508bea;
         text-align: center;
         font-size: 25px;
-        float: left; }
+        float: left;
+        line-height: 40px; }
       [data-template="slider"] .slider .slider-blue-box .blue-select .select-text {
-        float: right;
         font-size: 16px;
-        font-weight: 600; }
+        font-weight: 600;
+        line-height: 40px;
+        padding-left: 55px; }
         @media (max-width: 767px) {
           [data-template="slider"] .slider .slider-blue-box .blue-select .select-text {
             font-size: 12px; } }
