--- a/src/components/box/_box.scss
+++ b/src/components/box/_box.scss
@@ -81,7 +81,7 @@
 
     .box-title {
       font-size: 16px;
-      text-align: right;
+      text-align: left;
     }
 
     .box-content {
