--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -102,7 +102,8 @@
         cursor: pointer;
         background: $prim-light;
         transition: .3s;
-        padding: 0 20px;
+//        padding: 0 20px;
+        width: 12.5%;
         color: #ffffff;
 
         .fa {
