--- a/src/components/slider/_slider.scss
+++ b/src/components/slider/_slider.scss
@@ -103,6 +103,7 @@
 
           .item-text {
             font-size: 12px;
+            font-size: 13px;
             background: $light-grey;
             padding: 10px;
             min-height: 75px;
@@ -147,9 +148,23 @@
         padding: 10px;
         border-radius: 4px;
 //        height: 60px;
-        line-height: 40px;
         color: white;
         margin-bottom: 10px;
+
+        a.gaca-btn {
+          color: inherit;
+          text-decoration: none;
+          font-weight: normal;
+
+          &:hover {
+            color: $prim-light;
+          }
+        }
+
+        a {
+          color: inherit;
+          font-weight: bold;
+        }
 
         .clearfix {
           cursor: pointer;
@@ -164,13 +179,16 @@
           text-align: center;
           font-size: 25px;
           float: left;
+          line-height: 40px;
         }
 
         .select-text {
-          float: right;
+//          float: right;
           font-size: 16px;
           font-weight: 600;
-
+          line-height: 40px;
+//          margin-left: 10px;
+          padding-left: 55px;
 
           @media(max-width: 767px) {
             font-size: 12px;
